--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,21 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>game.Main</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<!-- Filter resources in "process-resources" phase @link http://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html -->
