--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,9 @@
 		<!-- unit test -->
 		<junit.version>4.12</junit.version>
 		<!-- other helpful libraries -->
-		<gson.version>2.3.1</gson.version>
+		<gson.version>2.1</gson.version>
 	</properties>
 
-	<dependencyManagement>
 		<dependencies>
 			<!-- unit test -->
 			<dependency>
@@ -43,7 +42,6 @@
 			</dependency>
 
 		</dependencies>
-	</dependencyManagement>
 
 
 
@@ -113,6 +111,7 @@
 					<groupId>com.google.code.gson</groupId>
 					<artifactId>gson</artifactId>
 					<version>${gson.version}</version>
+					<scope>compile</scope>
 				</dependency>
 			</dependencies>
 		</profile>
